--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.6.2
-    container_name: elasticsearch
+    container_name: magazin_elasticsearch
     environment:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
