--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name magazin.local;
-    index index.php;
+    index index.php index.html;
     root /app/public;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
