--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,13 @@ services:
     networks:
       - magazin
 
+  node:
+    image: node:14.1.0-alpine3.11
+    volumes:
+      - ./:/app
+    working_dir: /app
+    tty: true
+
   redis:
     image: redis
     environment:
