--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -5,6 +5,9 @@ server {
     root /app/public;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
+
+    sendfile off;
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
