--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -1,24 +1,26 @@
 server {
-    listen 80;
-    server_name magazin.local;
-    index index.php index.html;
-    root /app/public;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    server_name devon.local;
+    root /var/www/html/public;
 
-    sendfile off;
+    location / {
+        try_files $uri @rewriteapp;
+    }
 
-    location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-fpm:9000;
-        fastcgi_index index.php;
+    location /docs {
+        try_files $uri $uri/;
+    }
+    location @rewriteapp {
+        rewrite ^(.*)$ /index.php/$1 last;
+    }
+
+    location ~ ^/(app|index|config)\.php(/|$) {
+        fastcgi_pass php-upstream;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param HTTPS off;
     }
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
-    }
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
