--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:KoSXAai/KuUCM/+E1oxUBY9wS8YspSkbtndW74BhC/o=
 APP_DEBUG=true
 APP_URL=http://localhost:55000
+APP_TIMEZONE=Asia/Tashkent
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 
@@ -14,6 +15,8 @@ DB_PORT=5432
 DB_DATABASE=magazin
 DB_USERNAME=magazin
 DB_PASSWORD=magazin
+DB_PGSQL_SCHEMA=public
+DB_TIMEZONE=+05:00
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
