--- a/composer.json
+++ b/composer.json
@@ -11,22 +11,22 @@
         "php": "^7.2",
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^2.0",
         "intervention/image": "^2.5",
         "jeroennoten/laravel-adminlte": "^3.1",
         "kalnoy/nestedset": "^5.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "laravelcollective/html": "^6.1",
-      "ext-json": "*"
+        "laravelcollective/html": "^6.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
         "barryvdh/laravel-ide-helper": "^2.6",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
