--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "jquery": "^1.12.4",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
+        "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
@@ -27,7 +30,6 @@
         "ckeditor": "^4.12.1",
         "font-awesome": "^4.7.0",
         "icheck-bootstrap": "^3.0.1",
-        "jquery": "^1.9.1",
         "overlayscrollbars": "^1.12.0",
         "popper.js": "^1.16.0",
         "video.js": "^7.7.5",
