--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "kalnoy/nestedset": "^5.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "laravelcollective/html": "^6.1"
+        "laravelcollective/html": "^6.1",
+        "mcamara/laravel-localization": "^1.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
