--- a/.env.example
+++ b/.env.example
@@ -19,12 +19,13 @@ DB_PGSQL_SCHEMA=public
 DB_TIMEZONE=+05:00
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
+QUEUE_DRIVER=redis
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=magazinshop_redis_1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
