--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,10 @@ deploy_development:
   script:
   - rsync -av * /var/www/shop.dev/ --no-perms --no-owner --no-group
   - cd /var/www/shop.dev/
-  - php artisan migrate
+  - php artisan migrate:fresh --seed
   - npm i
   - npm run dev
+   - composer install
 #   - composer update
   environment:
     name: development
