--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,11 @@ deploy_development:
   script:
   - rsync -av * /var/www/shop.dev/ --no-perms --no-owner --no-group
   - cd /var/www/shop.dev/
-  - composer install
+#  - composer install
   - php artisan migrate:fresh --seed
   - npm i
   - npm run dev
-#   - composer update
+  - composer update
   environment:
     name: development
     url: https://shop.sec.uz
