--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,9 @@ deploy_development:
   - rsync -av * /var/www/shop.dev/ --no-perms --no-owner --no-group
   - cd /var/www/shop.dev/
   # - composer install
-  - composer update
-  - php artisan migrate:fresh --seed
+#  - composer update
+#  - php artisan migrate:fresh --seed
+  - php artisan migrate
   - npm i
   - npm run dev
   environment:
