--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,11 @@ deploy_development:
   - cd /var/www/shop.dev/
   # - composer install
 #  - composer update
-#  - php artisan migrate:fresh --seed
-  - php artisan migrate
+  - php artisan migrate:fresh --seed
+#  - php artisan migrate
+  - php artisan cache:clear
+  - php artisan config:clear
+  - php artisan view:clear
   - npm i
   - npm run dev
   environment:
