--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ deploy_development:
   # - composer install
 #  - composer update
   - composer dump-autoload
-  - php artisan migrate:fresh --seed
-#  - php artisan migrate
+#  - php artisan migrate:fresh --seed
+  - php artisan migrate
   - php artisan cache:clear
   - php artisan config:clear
   - php artisan view:clear
