--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^6.1",
-        "mcamara/laravel-localization": "^1.6"
+        "mcamara/laravel-localization": "^1.6",
+        "rennokki/laravel-eloquent-query-cache": "^2.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
