--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
 deploy_development:
   stage: deploy
   script:
-  - rsync -av * /var/www/shop.dev/ --no-perms --no-owner --no-group
+  - rsync -av -O * /var/www/shop.dev/ --no-perms --no-owner --no-group
   - cd /var/www/shop.dev/
   # - composer install
 #  - composer update
@@ -23,7 +23,7 @@ deploy_development:
 deploy_production:
   stage: deploy
   script:
-  - rsync -av * /var/www/shop.prod/ --no-perms --no-owner --no-group
+  - rsync -av -O * /var/www/shop.prod/ --no-perms --no-owner --no-group
   - cd /var/www/shop.prod/
   - php artisan migrate
   - composer update
