--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SMS_DRIVER=sms.uz
+SMS_SEND_LOCAL=true
+SMS_SMS_UZ_APP_URL=http://185.74.5.117:13002/cgi-bin/sendsms?
