--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.5",
         "jeroennoten/laravel-adminlte": "^3.1",
         "kalnoy/nestedset": "^5.0",
