show favorite products with filters, fix js

--- a/.env.example
+++ b/.env.example
@@ -52,7 +52,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SMS_DRIVER=sms.uz
-SMS_SEND_LOCAL=true
+SMS_SEND_LOCAL=false
 SMS_SMS_UZ_APP_URL=http://185.74.5.117:13002/cgi-bin/sendsms?
 
 PHONE_VERIFY_TOKEN_EXPIRE=300
