added elasticsearch and api for searching

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,8 @@ SMS_SEND_LOCAL=false
 SMS_SMS_UZ_APP_URL=http://185.74.5.117:13002/cgi-bin/sendsms?
 
 PHONE_VERIFY_TOKEN_EXPIRE=300
+
+SCOUT_DRIVER=Matchish\ScoutElasticSearch\Engines\ElasticSearchEngine
+ELASTICSEARCH_HOST=magazin_elasticsearch:9200
+SCOUT_PREFIX=
+SCOUT_QUEUE=true
