--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,10 +77,12 @@ services:
       - magazin
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.6.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
     container_name: magazin_elasticsearch
     environment:
-      - cluster.name=docker-cluster
+      - node.name=mybazaar-es
+      - cluster.name=mybazaar-es-docker-cluster
+      - cluster.initial_master_nodes=mybazaar-es
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
