--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,7 @@ REDIS_HOST=magazinshop_redis_1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+MAIL_MAILER=smtp
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
