added auth by networks

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,12 @@ SCOUT_DRIVER=Matchish\ScoutElasticSearch\Engines\ElasticSearchEngine
 ELASTICSEARCH_HOST=magazin_elasticsearch:9200
 SCOUT_PREFIX=
 SCOUT_QUEUE=true
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+
+TELEGRAM_BOT_NAME=uzmybazaar_bot
+TELEGRAM_TOKEN=1390362834:AAHCXwaz5avdYlKWVvSgrlW8InOlRTr8qtM
