--- a/.env.example
+++ b/.env.example
@@ -63,11 +63,11 @@ ELASTICSEARCH_HOST=magazin_elasticsearch:9200
 SCOUT_PREFIX=
 SCOUT_QUEUE=true
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=196378205372-fjj1csdh106mlo1sbn9sadq264clom0h.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=49w5EGzphpvFXpYRAYui-tl8
 
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
+FACEBOOK_CLIENT_ID=1344368135916572
+FACEBOOK_CLIENT_SECRET=f19c4cb765d3aa45481872031e01eedc
 
 TELEGRAM_BOT_NAME=uzmybazaar_bot
 TELEGRAM_TOKEN=1390362834:AAHCXwaz5avdYlKWVvSgrlW8InOlRTr8qtM
