--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,9 @@ deploy_development:
   script:
   - rsync -av -O * /var/www/shop.dev/ --no-perms --no-owner --no-group
   - cd /var/www/shop.dev/
-#   - composer install
+  - composer install
 #  - composer update
-  - composer dump-autoload
+#  - composer dump-autoload
 #  - php artisan migrate:fresh --seed
   - php artisan migrate
   - php artisan cache:clear
