--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_CONNECTION=pgsql
 DB_HOST=magazin-db
 DB_PORT=5432
 DB_DATABASE=magazin
-DB_USERNAME=magazin
+DB_USERNAME=dev_shop
 DB_PASSWORD=magazin
 DB_PGSQL_SCHEMA=public
 DB_TIMEZONE=+05:00
