--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,8 @@ services:
       - 11:5432
     container_name: magazin-db
     restart: unless-stopped
-    volumes:
-      - ./storage/docker/psql:/var/lib/postgresql/data
+    # volumes:
+    #   - ./storage/docker/psql:/var/lib/postgresql
     environment:
       - POSTGRES_DB=magazin
       - POSTGRES_USER=dev_shop
